Added cloudinary to  appSettings  and created binding model

--- a/DatingApp/DatingApp.API/appsettings.json
+++ b/DatingApp/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "Cloud name": "ds2alwhv4",
+    "ApiKey": "349992586183235",
+    "ApiSecret": "AwcalpSlkf82fI0Sw6ZyR5yzCU0"
+  }
 }
