Fixed bugs in photo upload

--- a/DatingApp/DatingApp.API/appsettings.json
+++ b/DatingApp/DatingApp.API/appsettings.json
@@ -12,7 +12,7 @@
   },
   "AllowedHosts": "*",
   "CloudinarySettings": {
-    "Cloud name": "ds2alwhv4",
+    "CloudName": "ds2alwhv4",
     "ApiKey": "349992586183235",
     "ApiSecret": "AwcalpSlkf82fI0Sw6ZyR5yzCU0"
   }
