--- a/DatingApp/DatingApp-SPA/package.json
+++ b/DatingApp/DatingApp-SPA/package.json
@@ -30,10 +30,11 @@
     "ngx-bootstrap": "^3.1.2",
     "ngx-gallery": "^5.9.0",
     "rxjs": "~6.3.3",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular-devkit/build-angular": "^0.12.2",
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
